--- a/Start@Google/pom.xml
+++ b/Start@Google/pom.xml
@@ -54,6 +54,12 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <version>2.7.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.8.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
